<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/card_view"
        android:padding="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/extenda40"
            android:text="@string/welcome1"
            android:textColor="@color/green"
            android:layout_marginStart="15dp"
            android:textSize="85sp">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/extenda40"
            android:text="@string/welcome2"
            android:layout_marginTop="80dp"
            android:textColor="@color/grey"
            android:layout_marginStart="15dp"
            android:textSize="85sp">
        </TextView>


    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-26dp"
        android:id="@+id/card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="3dp"
                    android:fontFamily="@font/muller_bold"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@+id/text_login"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/email_selected_drawable"
                    android:drawablePadding="12dp"
                    android:elevation="7dp"
                    android:ems="20"
                    android:hint="@string/text_email"
                    android:textStyle="bold"
                    android:inputType="textEmailAddress"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey_text" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@+id/editTextEmail"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/password_selected_drawable"
                    android:drawablePadding="12dp"
                    android:elevation="7dp"
                    android:ems="20"
                    android:textStyle="bold"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey_text" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editTextPassword"
                    android:layout_marginTop="15dp"
                    android:theme="@style/MyCheckBox"                    android:fontFamily="@font/muller_bold"
                    android:text="@string/remember"
                    android:textColor="@color/white"
                    android:textSize="16dp" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/checkBox"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_background"
                    android:elevation="7dp"
                    android:paddingStart="0dp"
                    android:text="@string/login_button"
                    android:textColor="@color/white"
                    android:fontFamily="@font/muller_bold"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:id="@+id/snackLayout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_below="@id/login_button"
                    android:layout_marginTop="16dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="160dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/muller_bold"
                        android:gravity="center"
                        android:text="@string/no_account"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textViewCreate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="155dp"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/muller_bold"
                        android:gravity="center"
                        android:text="@string/create"
                        android:textColor="@color/green"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </RelativeLayout>
            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>



</RelativeLayout>