<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/analitics"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/profile_image"
        android:background="@drawable/ic_analitics"
        android:layout_marginEnd="73dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mat"
        android:fontFamily="@font/muller_bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/name22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gen"
        android:fontFamily="@font/muller_bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="80dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/ic_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="27dp"
        android:contentDescription="@string/profile_image"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_water"
        android:layout_width="370dp"
        android:layout_height="245dp"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="25dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name22"
        app:layout_constraintWidth_percent="0.48">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gen_examples"
                android:fontFamily="@font/muller_bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"/>


            <ListView
                android:id="@+id/exam"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/text_background"
                android:gravity="center"
                android:elevation="7dp"
                android:padding="10dp"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="140dp"
                android:layout_height="52dp"
                android:layout_marginTop="60dp"
                android:layout_marginStart="215dp"
                android:paddingStart="20dp"
                android:background="@drawable/text_background"
                android:elevation="7dp"
                android:ems="20"
                android:hint="@string/answer"
                android:textStyle="bold"
                android:inputType="text"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />


            <TextView
                android:id="@+id/n2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:fontFamily="@font/muller_bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginStart="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="172dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next_button"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_marginTop="125dp"
                android:background="@drawable/button_background"
                android:elevation="7dp"
                android:layout_marginStart="15dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:fontFamily="@font/muller_bold"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/check_button"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_marginTop="125dp"
                android:background="@drawable/button_background"
                android:elevation="7dp"
                android:layout_marginStart="130dp"
                android:text="@string/check"
                android:textColor="@color/white"
                android:fontFamily="@font/muller_bold"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/skip_button"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_marginTop="125dp"
                android:background="@drawable/button_background"
                android:elevation="7dp"
                android:layout_marginStart="245dp"
                android:text="@string/skip"
                android:textColor="@color/white"
                android:fontFamily="@font/muller_bold"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="17dp"
                android:layout_marginTop="200dp"
                android:layout_marginBottom="0dp">

                <LinearLayout
                    android:id="@+id/easyLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginEnd="8dp">
                    <View
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/circle_selector_green" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mediumLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginEnd="8dp">
                    <View
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/circle_selector_yellow" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hardLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <View
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/circle_selector_red" />

                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="56dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="12dp"
            android:text="Privacy policy"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
